2012-02-10  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-default-send-mail-function): Made into own
	function for reuse by emacsbug.el.

2012-02-09  Juanma Barranquero  <lekktu@gmail.com>

	* gnus.el (gnus-method-ephemeral-p): Move after declaration of defsubst
	`gnus-sloppily-equal-method-parameters' to avoid a warning.

2012-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-archive.el (mm-archive-dissect-and-inline): New function.
	(mm-archive-dissect-and-inline): Fix up the undisplayer.

	* gnus-compat.el: Define `timer-set-function'.

	* mm-decode.el (mm-display-external): Output the text from the command
	in the buffer after the command finished.  This makes text-based
	commands behave better.

2012-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Add a compat for the old `url-retrieve'.

2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Make `help-function-arglist' be compatible on Emacs
	23.1.

2012-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread): Revert last two changes.

2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (smtpmail-smtp-user): Silence compiler warning.

2012-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-multi-smtp-send-mail): Also allow specifying the
	SMTP user name.

2012-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread):
	next-single-char-property-change may return nil in XEmacs.
	(gnus-summary-article-map): Fix typo.

2012-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-msg-mail): Use `message-mail' if Gnus isn't
	running.

	* nnimap.el (nnimap-wait-for-response): Minor fixup of message string.

	* gnus.el (gnus-server-extend-method): Don't add an -address component
	if the method already has one (bug#9676).

2012-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-insert-old-articles): Use a default instead